2000-12-22  John Harper  <jsh@eazel.com>

	* sawfish/wm/commands/grow-pack.jl (gp-avoid-windows): ignore
	iconified windows

2000-12-20  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/transient.jl (transient-of-p,
	indirect-transient-of-p): added keyword arg ALLOW-ROOT which
	enables the (= transient-for ROOT) checking code

	(transient-map-window): pass `#:allow-root t' to transient-of-p

	* sawfish/wm/placement.jl (place-window-centered-on-parent): if
	no single known parent, check if the currently focused window
	is in the same group as the window being placed. If so, take it
	as the implicit parent while placing

	* sawfish/wm/state/transient.jl (transient-of-p): disabled the
	code that checks if (= transient-for ROOT), it causes havoc in
	too many places

2000-12-19  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/iconify.jl (iconify-window,
	uniconify-window): support `group' and `transients'
	[un]iconification modes better. Don't use a recursive method,
	instead identify all the windows to be changed, then do
	everything in one go. For `transients' mode, only change state
	of shared transients if they [will] have no visible parents
	left

	* sawfish/wm/commands/groups.jl (iconify-group,
	uniconify-group, iconify-transient-group,
	uniconify-transient-group): use [un]iconify-window to implement
	these (by temporarily binding the necessary special variables)

	[ Last two changes fix #5252 ]

	* sawfish/wm/util/keymap.jl (where-is,
	make-memoizing-where-is): use substitute-wm-modifier to avoid
	showing W- in results

	* sawfish/wm/util/decode-events.jl (substitute-wm-modifier):
	new function, given an event, replaces the W- bit by whatever
	it's actually assigned to

	* sawfish/wm/state/gnome.jl (gnome-client-message-handler):
	handle a _WIN_HINTS client message type, format is similar to
	_WIN_STATE message

	* sawfish/wm/state/gnome.jl (gnome-window-class-hacks): removed
	the hardcoding of the `avoid' property for the panel. (George
	Lebl asked me to)
